fix(footer): name letter spacing

--- a/src/theme/Footer/index.module.css
+++ b/src/theme/Footer/index.module.css
@@ -42,7 +42,7 @@
 }
 
 .footer_name {
-  letter-spacing: -0.025em;
+  letter-spacing: -0.05em;
   font-weight: 700;
   font-size: 1.5rem;
   line-height: 2rem;
